Add first seen feat
